Seteamos valores por defecto para los tipos de propiedad
